@@ -79,6 +79,9 @@ version 2.86
 	Allow smaller then 64 prefix lengths in synth-domain, with caveats.
 	--synth-domain=1234:4567::/56,example.com is now valid.
 
+	Make domains generated by --synth-domain appear in replies
+	when in authoritative mode.
+
 	
 version 2.85
         Fix problem with DNS retries in 2.83/2.84.
